Make Arrow the only events ingestion path
Remove the appender-based events writer, the
jeffrey.microscope.profile.ingestion.event-writer mode switch and the
silent fallback. ArrowRuntimeSupport now fails fast at provider
construction with an actionable message (required --add-opens flag,
manifest pickup for java -jar, supported native platforms) instead of
degrading to a slower path.

Low-volume tables (event_types, stacktraces, threads, frames) keep
their appender writers. The Add-Opens fat-jar manifest attribute and
Jib jvmFlags are unchanged.

Tests reworked to direct literal assertions on rows read back from
DuckDB (null optionals, quoted/unicode JSON round-trip, zero/negative
hashes, duplicates, multi-batch + partial final flush). Full reactor
suite green.

https://claude.ai/code/session_015etWUg5Qq2jon5qcbNZXF7